[gd_scene load_steps=10 format=2]

[ext_resource path="res://AndGate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Grid.gd" type="Script" id=3]
[ext_resource path="res://Grid.shader" type="Shader" id=4]
[ext_resource path="res://Wire.gd" type="Script" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://XNorGate.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/gridColor = Vector3( 0.8, 0.8, 0.8 )
shader_param/scale = 20.0
shader_param/thickness = 0.03
shader_param/blurRatio = 0.05
shader_param/global_transform = Transform( 1024, 0, 0, 0, 600, 0, 0, 0, 1, 0, 0, 0 )
shader_param/zoom = 1.0

[sub_resource type="QuadMesh" id=2]

[node name="Root" type="Node2D"]
light_mask = -2147483647
script = ExtResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
z_index = -4
z_as_relative = false
current = true
script = ExtResource( 2 )

[node name="BackgroundGrid" type="MeshInstance2D" parent="Camera"]
material = SubResource( 1 )
scale = Vector2( 1024, 600 )
z_as_relative = false
mesh = SubResource( 2 )
script = ExtResource( 3 )

[node name="AndGate" parent="." instance=ExtResource( 1 )]
position = Vector2( 201.506, -34.3396 )
rotation = -1.5708
z_index = 10

[node name="Wire" type="Node2D" parent="."]
script = ExtResource( 5 )
start_point = Vector2( 200, 100 )
tension = 50.0
start_point_direction = 270.0

[node name="XNorGate" parent="." instance=ExtResource( 7 )]
[connection signal="on_drag" from="AndGate" to="." method="_on_AndGate_on_drag"]
[connection signal="on_drag" from="XNorGate" to="." method="_on_XNorGate_on_drag"]
